--- a/DemoDebug/DemoDebug.vcxproj
+++ b/DemoDebug/DemoDebug.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{53a92bb1-b3c4-482d-8775-114275b4e2cb}</ProjectGuid>
-    <RootNamespace>FunctionsDemo</RootNamespace>
+    <ProjectGuid>{adecdaee-06cc-40ca-8399-065d8def6161}</ProjectGuid>
+    <RootNamespace>DemoDebug</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Calculator.cpp" />
-    <ClCompile Include="FunctionsDemo.cpp" />
+    <ClCompile Include="Debug Demo.cpp" />
+    <ClCompile Include="Foo.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="FunctionsDemo.h" />
+    <ClInclude Include="Foo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
